# api-graphql-rs

./: .env  .gitpod.yml  Cargo.toml  README.md  docker-compose.yml
migrations/: 20220601025849_create-todo-table.sql  20220620020455_create-user.sql  20220620020534_add-todos-to-users.sql
src/: lib.rs  main.rs
src/errors/: error.rs
src/loaders/: users.rs
src/models/: todo.rs  user.rs
src/repositories/: mod.rs  todos.rs  users.rs
src/resolvers/: mod.rs  root.rs  todos.rs  users.rs
src/resolvers/mutations/: root.rs
tests/: users_test.rs
